--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -10,8 +10,8 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        <label for="username">Username:</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" />
+                        <label for="username">Email:</label>
+                        <input type="text" class="form-control" id="email" name="email" placeholder="Enter Email" />
                     </div>
                 </div>
             </div>
