--- a/Website/templates/basic.html
+++ b/Website/templates/basic.html
@@ -1,21 +1,47 @@
 {% extends "base.html" %} 
 {% block title %} Basic {% endblock %} 
-{% block content%} 
-    <h2>Top 10 Most Popular Movies (By Vote Count)</h2>
-    <div id="chart">{{chart1|safe}}</div>
+{% block content %} 
+    <div class="chart-grid">
+        <div class="chart1">
+            <div class="chart-container">
+                <h2>Top 10 Most Popular Movies (By Vote Count)</h2>
+                {{ chart1|safe }}
+            </div>
+        </div>
 
-    <h2>Top 10 Most Prolific Movie Directors (By Vote Count of their movie)</h2>
-    <div id="chart2">{{ chart2|safe }}</div>
+        <div class="chart2">
+            <div class="chart-container">
+                <h2>Genre Distribution</h2>
+                {{ chart3|safe }}
+            </div>
+        </div>
 
-    <h2>Genre Distribution</h2>
-    <div id="chart3">{{ chart3|safe }}</div>
+        <div class="chart3">
+            <div class="chart-container">
+                <h2>Total Number of Movies Per Year</h2>
+                {{ chart4|safe }}
+            </div>
+        </div>
 
-    <h2>Total Number of Movies Per Year</h2>
-    <div id="chart4">{{ chart4|safe }}</div>
+        <div class="chart4">
+            <div class="chart-container">
+                <h2>Top 10 Most Prolific Movie Directors<br>(By Vote Count of their movie)</h2>
+                {{ chart2|safe }}
+            </div>
+        </div>
 
-    <h2>Adult vs. Non-Adult Movies Count</h2>
-    <div id="chart5">{{ chart5|safe }}</div>
+        <div class="chart5">
+            <div class="chart-container">
+                <h2>Adult vs. Non-Adult Movies Count</h2>
+                {{ chart5|safe }}
+            </div>
+        </div>
 
-    <h2>Most Starred Actors/Actresses</h2>
-    <div id="chart6">{{ chart6|safe }}</div>
+        <div class="chart6">
+            <div class="chart-container">
+                <h2>Most Starred Actors/Actresses</h2>
+                {{ chart6|safe }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
