--- a/Website/templates/base2.html
+++ b/Website/templates/base2.html
@@ -6,9 +6,11 @@
     <title>{% block title %}Dashboard{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;800&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/base.css">
     <link rel="stylesheet" href="../static/homepage.css">
     <link rel="stylesheet" href="../static/profile.css">
+    <link rel="stylesheet" href="../static/login.css">
     <link rel="stylesheet" href="../static/signup.css">
 </head>
 <body>
