--- a/Website/templates/signup.html
+++ b/Website/templates/signup.html
@@ -3,71 +3,71 @@
 {% block content%} 
 
 <div class="signup-container">
-    <div class="profile-container">
-        <h1 class="text-center">Sign up</h1>
-        <h3 class="text-center">Create your account</h3>
+    <div class="signup-profile-container">
+        <h1 class="signup-text-center">Sign up</h1>
+        <h3 class="signup-text-center">Create your account</h3>
         <form method="POST">
-            <div class="row">
-                <div class="col-space">
-                    <div class="form-group">
+            <div class="signup-row">
+                <div class="signup-col-space">
+                    <div class="signup-form-group">
                         <label for="firstName">First Name:</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name" />
+                        <input type="text" class="signup-form-control" id="firstName" name="firstName" placeholder="Enter First Name" />
                     </div>
                 </div>
-                <div class="col">
-                    <div class="form-group">
+                <div class="signup-col">
+                    <div class="signup-form-group">
                         <label for="lastName">Last Name:</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter Last Name" />
+                        <input type="text" class="signup-form-control" id="lastName" name="lastName" placeholder="Enter Last Name" />
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="form-group">
+            <div class="signup-row">
+                <div class="signup-col">
+                    <div class="signup-form-group">
                         <label for="username">Username:</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" />
+                        <input type="text" class="signup-form-control" id="username" name="username" placeholder="Enter Username" />
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="form-group">
+            <div class="signup-row">
+                <div class="signup-col">
+                    <div class="signup-form-group">
                         <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" />
+                        <input type="email" class="signup-form-control" id="email" name="email" placeholder="Enter Email" />
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-space">
-                    <div class="form-group">
+            <div class="signup-row">
+                <div class="signup-col">
+                    <div class="signup-form-group">
                         <label for="password">Password:</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" />
-                        <small id="passwordHelp" class="form-text text-muted" style="display:none;">*Must have more than 7 characters</small>
+                        <input type="password" class="signup-form-control" id="password" name="password" placeholder="Enter Password" />
+                        <small id="passwordHelp" class="signup-form-text text-muted" style="display:none;">*Must have more than 7 characters</small>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="form-group">
+                <div class="signup-row">
+                    <div class="signup-col">
                         <label for="rePassword">Re-enter Password:</label>
-                        <input type="password" class="form-control" id="rePassword" name="rePassword" placeholder="Re-enter Password" />
+                        <input type="password" class="signup-form-control" id="rePassword" name="rePassword" placeholder="Re-enter Password" />
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col text-right">
-                    <button type="submit" class="btn btn-primary">Create your CineSurfer account</button>
+            <div class="signup-row">
+                <div class="signup-col signup-text-right">
+                    <button type="submit" class="signup-btn-primary">Create your CineSurfer account</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="signup-row">
+                <div class="signup-col">
                     <p>Already have an account? <a href="/login">Sign in</a></p>
                 </div>
             </div>
         </form>
     </div>
 
-    <div class="divider"></div>
+    <div class="signup-divider"></div>
 
-    <div class="benefits-container">
+    <div class="signup-benefits-container">
         <h2>Benefits of having your very own free Cinesurfer account</h2>
         <ul>
             <li>
